# Sree---Job-Application

./: .gitignore  README.md  answers_memory.json  applications.json  applications.sample.json  base_resume.json  base_resume.sample.json  portal_config.json  portal_config.sample.json  pyproject.toml  summary.sample.json  top_jobs.sample.csv
.github/workflows/: ci.yml
job-apply-autofill-extension/: content.js  manifest.json  popup.html  popup.js
resumes/: index.json
resumes/2026-05-01/: affirm-senior-software-engineer-backend-merchant-data-platform-eu.md  affirm-staff-analytics-engineer-subledger-platform.md  airbnb-senior-software-engineer-data-infrastructure.md  airbnb-senior-staff-data-engineer-marketplaces-dna.md  airbnb-staff-analytics-engineer.md  airbnb-staff-software-engineer-data-engineering.md  brex-data-engineer.md  coinbase-analytics-engineer.md  coinbase-senior-analytics-engineer-platform-financial-analytics.md  coinbase-senior-software-engineer-data-platform.md  confluent-analytics-engineer.md  confluent-staff-software-engineer-flink-control-plane.md  confluent-staff-software-engineer-flink-sql.md  databricks-senior-data-engineer.md  databricks-sr-analytics-engineer-gtm-strategy-and-operations.md  databricks-sr-staff-software-engineer-data-platform.md  experian-data-engineering-analyst-lead-scientist.md  stripe-data-platform-engineer.md  (+3 more)
scheduler/: com.jobapplications.daily.plist
tests/: test_cli_apply_url.py  test_cli_paths.py  test_drafting.py  test_health.py  test_ingestion.py  test_pipeline.py  test_resume_tailor.py  test_scheduler.py  test_ui.py
(+13 files in other folders)
